--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">今いくら</string>
+    <string name="app_name">今いくら？</string>
     <string name="action_settings">設定</string>
     <string name="setting_month_salary">月額給与</string>
-    <string name="setting_month_salary_title">月額給与を入力</string>
+    <string name="setting_month_salary_title">月額給与を入力してください</string>
     <string name="setting_work_start_time">勤務開始時刻</string>
-    <string name="setting_work_start_time_title">勤務開始時刻を入力してください(例 9:00 → 0900)</string>
+    <string name="setting_work_start_time_title">勤務開始時刻を入力してください\n(例 9:00 → 0900)</string>
     <string name="setting_work_end_time">勤務終了時刻</string>
-    <string name="setting_work_end_time_title">勤務終了時刻を入力してください(例 18:00 → 1800)</string>
+    <string name="setting_work_end_time_title">勤務終了時刻を入力してください\n(例 18:00 → 1800)</string>
     <string name="over_time_work">残業中</string>
     <string name="error_message">正しい時刻を入力してください</string>
 </resources>
