--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="setting_work_end_time">勤務終了時刻</string>
     <string name="setting_work_end_time_title">勤務終了時刻を入力してください\n(例 18:00 → 1800)</string>
     <string name="over_time_work">残業中</string>
-    <string name="error_message">正しい時刻を入力してください</string>
+    <string name="time_error_message">正しい時刻を入力してください</string>
+    <string name="salary_error_message">正しい時刻を入力してください</string>
 </resources>
